<resources>
    <string name="app_name">                        Biodata Mahasiswa</string>
    <string name="action_settings">                 Null</string>
    <string name="title_activity_buatbiodata">      Membuat Data Mahasiswa Baru</string>
    <string name="title_activity_lihatbiodata">     Melihat Data Mahasiswa</string>
    <string name="title_activity_updatebiodata">    Memperbarui Data Mahasiswa</string>
    <string name="buat_biodata_baru">               ADD</string>
    <string name="nama">                            Nama</string>
    <string name="back">                            Back</string>
    <string name="update">                          Update</string>
    <string name="alamat">                          Alamat</string>
    <string name="jenis_kelamin">                   Jenis Kelamin</string>
    <string name="tanggal_lahir">                   Tanggal Lahir</string>
    <string name="nomor">                           ID</string>
    <string name="textview">                        TextView</string>
    <string name="simpan">                          Simpan</string>
    <string name="action_contact">                  Contact</string>
    <string name="about">                           About</string>
    <string name="help">                            Help</string>
    <string name="contact">                         Contact</string>
    <string name="spl">                            </string>
    <string name="lokasitext">https://www.google.co.id/maps/place/Jl.+Raya+Karangjati+-+Pringapus,+Pringapus,+Semarang,+Jawa+Tengah/@-7.1870735,110.4535582,17z/data=!3m1!4b1!4m5!3m4!1s0x2e70844579f7cfb5:0x88f14ac784a6ea43!8m2!3d-7.1865221!4d110.4560006</string>
    <string name="help_text">                       ini help</string>
    <string name="about_text">                      as</string>
    <string name="contact_text">Call Me\: 085799027216</string>
    <string name="call">Call</string>
    <string name="contact_text2">SMS</string>
    <string name="sms">Send</string>
    <string name="hittext">Click and write your messege</string>
    <string name="lokasi">My Location</string>

</resources>
